--- a/test2.html
+++ b/test2.html
@@ -32,8 +32,9 @@
         <div id="recherche">
             <h1>Trouver votre Hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
+            <i class="icon"></i>
             <input type="search" name="rechercher" id="recherche">
-            <input type="button" value="Rechercher">
+            <button>rechercher</button>
             </div>
 
 <table>            
@@ -53,32 +54,63 @@
 
         <div id="filtre">
             <h2>Filtres</h2>
-            <div class="boutton">
-                <button name="button1">Economique</button>
-                <button name="button2">Familial</button>
-                <button name="button3">romantique</button>
-                <button name="button4">Animaux autorisés</button>
-            </div>
+            <ul class="contenant">
+               <button><li>
+                    <i class="#" >icon</i>
+                    <a href="#">Economique</a>
+               </li></button>
+                <button><li>
+                    <i class="#" >icon</i>
+                    <a href="#">Familial</a>
+               </li></button>
+               <button><li>
+                    <i class="#" >icon</i>
+                    <a href="#">Romantique</a>
+                </li></button>
+                <button><li>
+                    <i class="#" >icon</i>
+                    <a href="#">Animaux autorisés</a>
+                </li></button>
+            </ul>
             <p>Plus de 500 logements sont diponibles dans cette ville</p>
 
         </div>
-        <section>
+        <figure>
             <div id="hebergement_Marseille">
                 <h1 id="Hébergements">Hebergements à marseille</h1>
-                <div class="button"></div>
+                <div class="button">
                 <button><img src="photos/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la cannebière"></button>
                 <button><img src="photos/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port"></button>
                 <button><img src="photos/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes"></button>
                 <button><img src="photos/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer"></button>
                 <button><img src="photos/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier"></button>
                 <button><img src="photos/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtelchez Amina"></button>
+                </div>
             </div>
         <aside>
             <div id="hebergement_populaire"></div>
-            <h1>Les plus populaires</h1>
+            <h1>Les plus populaires <i class="#"></i>icon</h1>
+            <div class="buttom">
+                <button><img src="photos/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel Le soleil du matin"></button>
+                <button><img src="photos/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"></button>
+                <button><img src="photos/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blance"></button>
+            </div>
         </aside>
 
-        </section>
+    </figure>
+        <figure>
+            <div class="activités_a_marseille">
+            <h1 id="Activités">Activités à Marseille</h1>
+            <div class="buttom">
+                <button><img src="photos/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port"></button>
+                <button><img src="photos/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles de frioul"></button>
+                <button><img src="photos/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomègues"></button>
+                <button><img src="photos/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"></button>
+                <button><img src="photos/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"></button>
+                <button><img src="photos/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"></button>
+            </div>
+            </div>
+        </figure>
 
         <footer>
             <div id="Apropos">
