changement fichier et autres

--- a/test2.html
+++ b/test2.html
@@ -16,9 +16,9 @@
     <div id="bloc-page">
         <header>
             <div id="logo">
-                <img src="photos/images/logo/Reservia@3x.png" alt="logo reservia">
+                <img src="photos/images/logo/Reservia2.png" class="logo" alt="logo reservia">
             </div>
-
+            <div id="nav">
                  <nav>
                      <ul>
                          <li><a href="#Hébergements">Hébergements</a></li>
@@ -26,16 +26,17 @@
                          <li><a href="#">S'inscrire</a></li>
                      </ul>
                  </nav>
+              </div>   
 
         </header>
 
-        <div id="recherche">
-            <h1>Trouver votre Hébergement pour des vacances de rêve</h1>
+        <form name="rechercher">
+            <h2>Trouver votre Hébergement pour des vacances de rêve</h2>
             <p>En plein centre ville ou en pleine nature</p>
             <i class="icon"></i>
-            <input type="search" name="rechercher" id="recherche">
+            <input type="search" name="rechercher" id="recherche" value="Marseille,france">
             <button>rechercher</button>
-            </div>
+        </form>
 
 <table>            
     <tr>
@@ -64,7 +65,7 @@
                     <a href="#">Familial</a>
                </li></button>
                <button><li>
-                    <i class="#" >icon</i>
+                    <i class="fas fa-heart" ></i>
                     <a href="#">Romantique</a>
                 </li></button>
                 <button><li>
@@ -78,69 +79,53 @@
         <figure>
             <div id="hebergement_Marseille">
                 <h1 id="Hébergements">Hebergements à marseille</h1>
-                <div class="button">
-                <button><img src="photos/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la cannebière"></button>
-                <button><img src="photos/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port"></button>
-                <button><img src="photos/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes"></button>
-                <button><img src="photos/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer"></button>
-                <button><img src="photos/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier"></button>
-                <button><img src="photos/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtelchez Amina"></button>
-                </div>
+                <img src="photos/images/hebergements/small/auberge_canebiere.jpg" alt="Auberge la cannebière">
+                <img src="photos/images/hebergements/small/hotel_port.jpg" alt="hôtel du port">
+                <img src="photos/images/hebergements/small/les_mouettes.jpg" alt="hôtel les mouettes">
+                <img src="photos/images/hebergements/small/hotel_la_mer.jpg" alt="hôtel de la mer">
+                <img src="photos/images/hebergements/small/le_panier.jpg" alt="Auberge le panier">
+                <img src="photos/images/hebergements/small/chez_amina.jpg" alt="hôtel chez Amina">
             </div>
         <aside>
             <div id="hebergement_populaire"></div>
             <h1>Les plus populaires <i class="#"></i>icon</h1>
-            <div class="buttom">
-                <button><img src="photos/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel Le soleil du matin"></button>
-                <button><img src="photos/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"></button>
-                <button><img src="photos/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blance"></button>
+                <img src="photos/images/hebergements/small/soleil_matin.jpg" alt="hôtel Le soleil du matin">
+                <img src="photos/images/hebergements/small/chambre_hotes.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                <img src="photos/images/hebergements/small/bleu_blanc.jpg" alt="Hôtel tout bleu et blance">
             </div>
         </aside>
 
     </figure>
-        <figure>
+
             <div class="activités_a_marseille">
-            <h1 id="Activités">Activités à Marseille</h1>
+            <h2 id="Activités">Activités à Marseille</h2>
             <div class="buttom">
-                <button><img src="photos/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port"></button>
-                <button><img src="photos/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles de frioul"></button>
-                <button><img src="photos/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomègues"></button>
-                <button><img src="photos/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"></button>
-                <button><img src="photos/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"></button>
-                <button><img src="photos/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"></button>
+                <button><img src="photos/images/activites/small/vieux_port.jpg" alt="Vieux port"></button>
+                <button><img src="photos/images/activites/small/iles_frioul.jpg" alt="Iles de frioul"></button>
+                <button><img src="photos/images/activites/small/fort_pomegues.jpg" alt="Fort de pomègues"></button>
+                <button><img src="photos/images/activites/small/calanques.jpg" alt="Parc National des Calanques"></button>
+                <button><img src="photos/images/activites/small/la_garde.jpg" alt="Notre-Dame-de-la-Garde"></button>
+                <button><img src="photos/images/activites/small/longchamp.jpg" alt="Parc Longchamp"></button>
             </div>
             </div>
-        </figure>
 
         <footer>
             <div id="Apropos">
                 <h1>A Propos</h1>
-                    <nav>
-                        <ul>
-                            <li><a href="#">fonctionnement du site</a></li>
-                            <li><a href="#">Conditions génerales de vente</a></li>
-                            <li><a href="#">Données et confidentialité</a></li>
-                        </ul>
-                    </nav>
+                            <a href="#">fonctionnement du site</a>
+                            <a href="#">Conditions génerales de vente</a>
+                            <a href="#">Données et confidentialité</a>
             </div>
                 <div id="nos hebergements">
                 <h1>Nos hébergements</h1>
-                    <nav>
-                        <ul>
-                            <li><a href="#">Charte qualité</a></li>
-                            <li><a href="#">Soumettre votre hotel</a></li>
-                        </ul>
-                    </nav>
+                            <a href="#">Charte qualité</a>
+                            <a href="#">Soumettre votre hotel</a>
                 </div>
                 <div id="Assistance">
                 <h1> Assistance</h1>
-                    <nav>
-                        <ul>
-                            <li><a href="#">Centre d'aide</a></li>
-                            <li><a href="#">Nous contacter</a></li>
-                            <li><a href="#">S'inscrire</a></li>
-                        </ul>
-                    </nav>
+                            <a href="#">Centre d'aide</a>
+                            <a href="#">Nous contacter</a>
+                            <a href="#">S'inscrire</a>
                 </div>
 
         </footer>
