--- a/test2.html
+++ b/test2.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,75 +54,69 @@
 
 
         <div id="filtre">
-            <h2>Filtres</h2>
+            <h3>Filtres</h3>
             <ul class="contenant">
                <button><li>
-                    <i class="#" >icon</i>
+                    <i class="#">icon</i>
                     <a href="#">Economique</a>
                </li></button>
                 <button><li>
-                    <i class="#" >icon</i>
+                    <i class="#">icon</i>
                     <a href="#">Familial</a>
                </li></button>
                <button><li>
-                    <i class="fas fa-heart" ></i>
+                    <i class="#"></i>
                     <a href="#">Romantique</a>
                 </li></button>
                 <button><li>
-                    <i class="#" >icon</i>
+                    <i class="#">icon</i>
                     <a href="#">Animaux autorisés</a>
                 </li></button>
             </ul>
             <p>Plus de 500 logements sont diponibles dans cette ville</p>
 
         </div>
-        <figure>
+        
             <div id="hebergement_Marseille">
-                <h1 id="Hébergements">Hebergements à marseille</h1>
-                <img src="photos/images/hebergements/small/auberge_canebiere.jpg" alt="Auberge la cannebière">
-                <img src="photos/images/hebergements/small/hotel_port.jpg" alt="hôtel du port">
-                <img src="photos/images/hebergements/small/les_mouettes.jpg" alt="hôtel les mouettes">
-                <img src="photos/images/hebergements/small/hotel_la_mer.jpg" alt="hôtel de la mer">
-                <img src="photos/images/hebergements/small/le_panier.jpg" alt="Auberge le panier">
-                <img src="photos/images/hebergements/small/chez_amina.jpg" alt="hôtel chez Amina">
+                <h2 id="Hébergements">Hebergements à marseille</h2>
+                    <a href="#"><img src="photos/images/hebergements/small/auberge_canebiere.jpg" alt="Auberge la cannebière"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/hotel_port.jpg" alt="hôtel du port"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/les_mouettes.jpg" alt="hôtel les mouettes"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/hotel_la_mer.jpg" alt="hôtel de la mer"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/le_panier.jpg" alt="Auberge le panier"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/chez_amina.jpg" alt="hôtel chez Amina"/></a>
             </div>
-        <aside>
-            <div id="hebergement_populaire"></div>
-            <h1>Les plus populaires <i class="#"></i>icon</h1>
-                <img src="photos/images/hebergements/small/soleil_matin.jpg" alt="hôtel Le soleil du matin">
-                <img src="photos/images/hebergements/small/chambre_hotes.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
-                <img src="photos/images/hebergements/small/bleu_blanc.jpg" alt="Hôtel tout bleu et blance">
+            <div id="hebergement_populaire">
+            <h2>Les plus populaires <i class="#"></i>icon</h2>
+                    <a href="#"><img src="photos/images/hebergements/small/soleil_matin.jpg" alt="hôtel Le soleil du matin"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/chambre_hotes.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/></a>
+                    <a href="#"><img src="photos/images/hebergements/small/bleu_blanc.jpg" alt="Hôtel tout bleu et blance"/></a>
             </div>
-        </aside>
-
-    </figure>
 
             <div class="activités_a_marseille">
             <h2 id="Activités">Activités à Marseille</h2>
-            <div class="buttom">
-                <button><img src="photos/images/activites/small/vieux_port.jpg" alt="Vieux port"></button>
-                <button><img src="photos/images/activites/small/iles_frioul.jpg" alt="Iles de frioul"></button>
-                <button><img src="photos/images/activites/small/fort_pomegues.jpg" alt="Fort de pomègues"></button>
-                <button><img src="photos/images/activites/small/calanques.jpg" alt="Parc National des Calanques"></button>
-                <button><img src="photos/images/activites/small/la_garde.jpg" alt="Notre-Dame-de-la-Garde"></button>
-                <button><img src="photos/images/activites/small/longchamp.jpg" alt="Parc Longchamp"></button>
-            </div>
+                    <a href="#"><img src="photos/images/activites/small/vieux_port.jpg" alt="Vieux port"/></a>
+                    <a href="#"><img src="photos/images/activites/small/iles_frioul.jpg" alt="Iles de frioul"/></a>
+                    <a href="#"><img src="photos/images/activites/small/fort_pomegues.jpg" alt="Fort de pomègues"/></a>
+                    <a href="#"><img src="photos/images/activites/small/calanques.jpg" alt="Parc National des Calanques"/></a>
+                    <a href="#"><img src="photos/images/activites/small/la_garde.jpg" alt="Notre-Dame-de-la-Garde"/></a>
+                    <a href="#"><img src="photos/images/activites/small/longchamp.jpg" alt="Parc Longchamp"/></a>
             </div>
 
         <footer>
             <div id="Apropos">
-                <h1>A Propos</h1>
+                <h2>A Propos</h2>
                             <a href="#">fonctionnement du site</a>
                             <a href="#">Conditions génerales de vente</a>
                             <a href="#">Données et confidentialité</a>
             </div>
                 <div id="nos hebergements">
-                <h1>Nos hébergements</h1>
+                <h2>Nos hébergements</h2>
                             <a href="#">Charte qualité</a>
                             <a href="#">Soumettre votre hotel</a>
                 </div>
                 <div id="Assistance">
-                <h1> Assistance</h1>
+                <h2> Assistance</h2>
                             <a href="#">Centre d'aide</a>
                             <a href="#">Nous contacter</a>
                             <a href="#">S'inscrire</a>
