changement des id en class html et amelioration du header css

--- a/test2.html
+++ b/test2.html
@@ -13,17 +13,16 @@
     
 </head>
 <body>
-    <div id="bloc-page">
-        <header>
-            <div id="logo">
-                <img src="photos/images/logo/Reservia2.png" class="logo" alt="logo reservia">
+        <header class="header">
+            <div class="logo-box">
+                <img src="./photos/images/logo/Reservia2.png" class="logo" alt="logo reservia">
             </div>
-            <div id="nav">
+            <div class="nav_nav">
                  <nav>
-                     <ul>
-                         <li><a href="#Hébergements">Hébergements</a></li>
-                         <li><a href="#Activités">Activités</a></li>
-                         <li><a href="#">S'inscrire</a></li>
+                     <ul class="navigation_list">
+                         <li class="navigation_objet1"><a href="#Hébergements">Hébergements</a></li>
+                         <li class="navigation_objet1"><a href="#Activités">Activités</a></li>
+                         <li class="navigation_objet1"><a href="#" id="inscrire">S'inscrire</a></li>
                      </ul>
                  </nav>
               </div>   
@@ -53,7 +52,7 @@
 
 
 
-        <div id="filtre">
+        <div class="filtre">
             <h3>Filtres</h3>
             <ul class="contenant">
                <button><li>
@@ -77,45 +76,45 @@
 
         </div>
         
-            <div id="hebergement_Marseille">
+            <div class="hebergement_Marseille">
                 <h2 id="Hébergements">Hebergements à marseille</h2>
-                    <a href="#"><img src="photos/images/hebergements/small/auberge_canebiere.jpg" alt="Auberge la cannebière"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/hotel_port.jpg" alt="hôtel du port"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/les_mouettes.jpg" alt="hôtel les mouettes"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/hotel_la_mer.jpg" alt="hôtel de la mer"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/le_panier.jpg" alt="Auberge le panier"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/chez_amina.jpg" alt="hôtel chez Amina"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/auberge_canebiere.jpg" alt="Auberge la cannebière"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/hotel_port.jpg" alt="hôtel du port"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/les_mouettes.jpg" alt="hôtel les mouettes"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/hotel_la_mer.jpg" alt="hôtel de la mer"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/le_panier.jpg" alt="Auberge le panier"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/chez_amina.jpg" alt="hôtel chez Amina"/></a>
             </div>
-            <div id="hebergement_populaire">
+            <div class="hebergement_populaire">
             <h2>Les plus populaires <i class="#"></i>icon</h2>
-                    <a href="#"><img src="photos/images/hebergements/small/soleil_matin.jpg" alt="hôtel Le soleil du matin"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/chambre_hotes.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/></a>
-                    <a href="#"><img src="photos/images/hebergements/small/bleu_blanc.jpg" alt="Hôtel tout bleu et blance"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/soleil_matin.jpg" alt="hôtel Le soleil du matin"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/chambre_hotes.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/></a>
+                    <a href="#"><img src="./photos/images/hebergements/small/bleu_blanc.jpg" alt="Hôtel tout bleu et blance"/></a>
             </div>
 
             <div class="activités_a_marseille">
             <h2 id="Activités">Activités à Marseille</h2>
-                    <a href="#"><img src="photos/images/activites/small/vieux_port.jpg" alt="Vieux port"/></a>
-                    <a href="#"><img src="photos/images/activites/small/iles_frioul.jpg" alt="Iles de frioul"/></a>
-                    <a href="#"><img src="photos/images/activites/small/fort_pomegues.jpg" alt="Fort de pomègues"/></a>
-                    <a href="#"><img src="photos/images/activites/small/calanques.jpg" alt="Parc National des Calanques"/></a>
-                    <a href="#"><img src="photos/images/activites/small/la_garde.jpg" alt="Notre-Dame-de-la-Garde"/></a>
-                    <a href="#"><img src="photos/images/activites/small/longchamp.jpg" alt="Parc Longchamp"/></a>
+                    <a href="#"><img src="./photos/images/activites/small/vieux_port.jpg" alt="Vieux port"/></a>
+                    <a href="#"><img src="./photos/images/activites/small/iles_frioul.jpg" alt="Iles de frioul"/></a>
+                    <a href="#"><img src="./photos/images/activites/small/fort_pomegues.jpg" alt="Fort de pomègues"/></a>
+                    <a href="#"><img src="./photos/images/activites/small/calanques.jpg" alt="Parc National des Calanques"/></a>
+                    <a href="#"><img src="./photos/images/activites/small/la_garde.jpg" alt="Notre-Dame-de-la-Garde"/></a>
+                    <a href="#"><img src="./photos/images/activites/small/longchamp.jpg" alt="Parc Longchamp"/></a>
             </div>
 
         <footer>
-            <div id="Apropos">
+            <div class="Apropos">
                 <h2>A Propos</h2>
                             <a href="#">fonctionnement du site</a>
                             <a href="#">Conditions génerales de vente</a>
                             <a href="#">Données et confidentialité</a>
             </div>
-                <div id="nos hebergements">
+                <div class="nos_hebergements">
                 <h2>Nos hébergements</h2>
                             <a href="#">Charte qualité</a>
                             <a href="#">Soumettre votre hotel</a>
                 </div>
-                <div id="Assistance">
+                <div class="Assistance">
                 <h2> Assistance</h2>
                             <a href="#">Centre d'aide</a>
                             <a href="#">Nous contacter</a>
@@ -123,7 +122,6 @@
                 </div>
 
         </footer>
-    </div>
   
 </body>
 </html>
